part 37 create comment

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,5 @@ DB_NAME=nestjs-instagram-practice
 DB_PORT=5432
 DB_PASSWORD=password123
 DB_USERNAME=postgres
+JWT_ACCESS_SECRET=accesspassword
+JWT_REFRESH_SECRET=refreshpassword
