--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/uuid": "^8.3.4",
     "aws-sdk": "^2.1082.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -44,7 +46,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.43"
+    "typeorm": "^0.2.43",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
