--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ DB_PASSWORD=password123
 DB_USERNAME=postgres
 JWT_ACCESS_SECRET=accesspassword
 JWT_REFRESH_SECRET=refreshpassword
+AWS_ACCESS_KEY_ID=sanjeev
+AWS_SECRET_ACCESS_KEY=password123
+AWS_REGION=us-east-1
+AWS_BUCKET_NAME=nestjs-course-bucket
